[package]
name = "psh"
version = "0.1.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"

[[bin]]
name = 'psh'
path = 'src/main.rs'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bump_alloc = "^0.1.0"
lazy_static = "^1.4.0"
regex = "^1.3.9"
